--- a/설빈이연습3.html
+++ b/설빈이연습3.html
@@ -17,7 +17,7 @@
   <ol>
   <h3>This week's schedule</h3>
 </ol>
-<img src="일정.jpg" width="90%">
+<img src="일정.jpg" width="90%" title="source = NAVER">
 <p>
 The game may be <strong> suspended</strong> or<strong> postponed</strong> depending <strong>on the ongoing corona19</strong>  confirmation,
 which will be announced later.</p>
