--- a/설빈이연습2.html
+++ b/설빈이연습2.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="shortcut icon" type="image⁄x-icon" href="공.jpg">
 <title>FBallLL_Players</title>
 <meta charset="utf-8">
 </head>
@@ -12,7 +13,10 @@
 <li><a href="설빈이연습2.html">PLAYERS</a></li>
 <li><a href="설빈이연습3.html">SCHEDULE</a></li>
 </ol>
-
+<p>
+  <iframe width="743" height="418" src="https://www.youtube.com/embed/gWOe_NCgU7g"
+   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</P>
 
   <h3>Tottenham spurs player: SoN</h3>
 
