--- a/설빈이연습1.html
+++ b/설빈이연습1.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="shortcut icon" type="image⁄x-icon" href="공.jpg">
 <title>FBallL_EPL</title>
 <meta charset="utf-8">
 </head>
