--- a/설빈이연습3.html
+++ b/설빈이연습3.html
@@ -4,6 +4,17 @@
     <link rel="shortcut icon" type="image⁄x-icon" href="공.jpg">
 <title>FBallL_SCHEDULE</title>
 <meta charset="utf-8">
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LBS4XCCERK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LBS4XCCERK');
+</script>
+    
 </head>
 
 <body>
