--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
   gtag('config', 'G-LBS4XCCERK');
 </script>
+    <style>
+ a{
+  color:darkblue;
+  text-decoration: none;
+
+ }
+</style>
 </head>
 
 <body>
