--- a/설빈이연습1.html
+++ b/설빈이연습1.html
@@ -14,10 +14,17 @@
 
   gtag('config', 'G-LBS4XCCERK');
 </script>
+    <style>
+ a{
+  color:darkblue;
+  text-decoration: none;
+
+ }
+</style>
 </head>
 
 <body>
-<h1><a href="index.html">FBallLL</a></h1>
+<h1><a href="index.html" style="color:maroon; text-decoration:underline;">FBallLL</a></h1>
 <ol>
 <li><a href="설빈이연습1.html">EPL</a></li>
 <li><a href="설빈이연습2.html">PLAYERS</a></li>
