--- a/설빈이연습2.html
+++ b/설빈이연습2.html
@@ -13,13 +13,20 @@
 
   gtag('config', 'G-LBS4XCCERK');
 </script>
+    <style>
+ a{
+  color:darkblue;
+  text-decoration: none;
+
+ }
+</style>
 </head>
 
 <body>
 <h1><a href="index12.html">FBallLL</a></h1>
 <ol>
 <li><a href="설빈이연습1.html">EPL</a></li>
-<li><a href="설빈이연습2.html">PLAYERS</a></li>
+<li><a href="설빈이연습2.html" style="color:maroon; text-decoration:underline;">PLAYERS</a></li>
 <li><a href="설빈이연습3.html">SCHEDULE</a></li>
 </ol>
 <p>
