--- a/설빈이연습3.html
+++ b/설빈이연습3.html
@@ -13,8 +13,13 @@
   gtag('js', new Date());
 
   gtag('config', 'G-LBS4XCCERK');
-</script>
-    
+    </script>
+    <style>
+    a{
+        color:darkblue;
+     text-decoration:none;
+    }
+    </style>
 </head>
 
 <body>
@@ -22,7 +27,7 @@
 <ol>
 <li><a href="설빈이연습1.html">EPL</a></li>
 <li><a href="설빈이연습2.html">PLAYERS</a></li>
-<li><a href="설빈이연습3.html">SCHEDULE</a></li>
+<li><a href="설빈이연습3.html" style="color:maroon; text-decoration:underline;">SCHEDULE</a></li>
 </ol>
 
   <h2>SCHEDULE</h2>
