--- a/설빈이연습2.html
+++ b/설빈이연습2.html
@@ -13,28 +13,72 @@
 
   gtag('config', 'G-LBS4XCCERK');
 </script>
-    <style>
+
+<style>
+body{
+        margin:0;
+    }
+
  a{
   color:darkblue;
   text-decoration: none;
+  font-family:fantasy;
+ }
 
+ #active
+ {
+   color:yellowgreen;
+ }
+
+ .saw
+ {
+   color:darkblue;
+ }
+
+ h1{
+   font-size:60px;
+   border-bottom: 8px solid yellowgreen;
+   margin:0;
+   padding:13px;
+ }
+
+ h3{
+   font-size:25px;
+ }
+
+ h1,h3{
+   text-align:center;
+   font-family:fantasy;
+ }
+
+ ol{
+   border-right:8px solid yellowgreen;
+   width:110px;
+   font-size:27px;
+   margin:0;
+   padding:8px;
+ }
+
+ div{border:5px solid lightpink;
  }
 </style>
+
 </head>
 
 <body>
-<h1><a href="index12.html">FBallLL</a></h1>
+<h1><a href="index12.html">FBallLL</a><img src="공.jpg" width=55px;></h1>
 <ol>
-<li><a href="설빈이연습1.html">EPL</a></li>
-<li><a href="설빈이연습2.html" style="color:maroon; text-decoration:underline;">PLAYERS</a></li>
-<li><a href="설빈이연습3.html">SCHEDULE</a></li>
+<li><a href="설빈이연습1.html"class="saw">EPL</a></li>
+<li><a href="설빈이연습2.html" id="active">PLAYERS</a></li>
+<li><a href="설빈이연습3.html" class="saw">SCHEDULE</a></li>
 </ol>
 <p>
   <iframe width="743" height="418" src="https://www.youtube.com/embed/gWOe_NCgU7g"
    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </P>
 
-  <h3>Tottenham spurs player: SoN</h3>
+<div>
+   <h3>Tottenham spurs player: SoN</h3>
 
 ※<a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%86%90%ED%9D%A5%EB%AF%BC&oquery=%EC%9C%A0%ED%8A%9C%EB%B8%8C&tqi=U%2BJYWlp0JXossf3CRElssssssXl-052828" target="_blank" title="about SON">손흥민</a>이 <strong><u>월드클래스</u> 선수 </strong>라는 것은 이 영상을 보면 확실하게 이해할 수 있을 것이다.
 <ul>This video clearly shows that <u>Son is a <strong>world class </strong> player</u>
@@ -65,9 +109,10 @@ Through this, it was selected as the EPL Best 11 of the Year selected locally in
 Son Heung-min, who is only scoring 99 goals for Tottenham, has already surpassed
 Cha Bum-geun with 98 goals by achieving 100 goals in the big league career including the Bundesliga period.<br>
  Son Heung-min is inferior as the best soccer player who has shined this year
-  so much that rumors that the world's best clubs are considering recruiting.</p>
-  <p>
+  so much that rumors that the world's best clubs are considering recruiting.</p
+  ></div>
      <div id="disqus_thread"></div>
+     <p>
 <script>
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
