--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
 
   gtag('config', 'G-LBS4XCCERK');
 </script>
-    <style>
- a{
-  color:darkblue;
-  text-decoration: none;
-
- }
-</style>
-</head>
+  <link rel="stylesheet" href="중복제거.css">
 
 <body>
 <h1><a href="index12.html" target="_blank">FBallL</a></h1>
