--- a/설빈이연습1.html
+++ b/설빈이연습1.html
@@ -14,13 +14,7 @@
 
   gtag('config', 'G-LBS4XCCERK');
 </script>
-    <style>
- a{
-  color:darkblue;
-  text-decoration: none;
-
- }
-</style>
+   <link rel="stylesheet" href="중복제거.css">
 </head>
 
 <body>
