--- a/설빈이연습2.html
+++ b/설빈이연습2.html
@@ -14,54 +14,7 @@
   gtag('config', 'G-LBS4XCCERK');
 </script>
 
-<style>
-body{
-        margin:0;
-    }
-
- a{
-  color:darkblue;
-  text-decoration: none;
-  font-family:fantasy;
- }
-
- #active
- {
-   color:yellowgreen;
- }
-
- .saw
- {
-   color:darkblue;
- }
-
- h1{
-   font-size:60px;
-   border-bottom: 8px solid yellowgreen;
-   margin:0;
-   padding:13px;
- }
-
- h3{
-   font-size:25px;
- }
-
- h1,h3{
-   text-align:center;
-   font-family:fantasy;
- }
-
- ol{
-   border-right:8px solid yellowgreen;
-   width:110px;
-   font-size:27px;
-   margin:0;
-   padding:8px;
- }
-
- div{border:5px solid lightpink;
- }
-</style>
+<link rel="stylesheet" href="중복제거.css">
 
 </head>
 
