--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset="utf-8">
     <link rel="shortcut icon" type="image⁄x-icon" href="공.jpg">
 <title>FBallL_WEB</title>
-<meta charset="utf-8">
-    
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LBS4XCCERK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<link rel="stylesheet" href="중복제거.css">
 
-  gtag('config', 'G-LBS4XCCERK');
-</script>
-  <link rel="stylesheet" href="중복제거.css">
+ </head>
 
-<body>
-<h1><a href="index12.html" target="_blank">FBallL</a></h1>
-<ol>
-<li><a href="설빈이연습1.html" target="_blank">EPL</a></li>
-<li><a href="설빈이연습2.html"target="_blank">PLAYERS</a></li>
-<li><a href="설빈이연습3.html"target="_blank">SCHEDULE</a></li>
-</ol>
+ <body>
+ <h1><a href="index.html">FBallLL</a><img src="공.jpg" width=55px;></h1>
+<div id="grid">
+ <ol>
+ <li><a href="설빈이연습1.html">EPL</a></li>
+ <li><a href="설빈이연습2.html" >PLAYERS</a></li>
+ <li><a href="설빈이연습3.html">SCHEDULE</a></li>
+ </ol>
 
-  <h2>FBallLL</h2>
+ <div id="article">
+  <h2>FBallLL(FoootBallLoveLife)</h2>
 
   ※<a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%86%90%ED%9D%A5%EB%AF%BC&oquery=%EC%9C%A0%ED%8A%9C%EB%B8%8C&tqi=U%2BJYWlp0JXossf3CRElssssssXl-052828" target="_blank" title="about SON">손흥민</a>이 <strong><u>월드클래스</u> 선수 </strong>라는 것은 이 영상을 보면 확실하게 이해할 수 있을 것이다.
   <ul>This video clearly shows that <u>Son is a <strong>world class </strong> player</u>
@@ -57,40 +51,30 @@
    Son Heung-min is inferior as the best soccer player who has shined this year
     so much that rumors that the world's best clubs are considering recruiting.</p>
     <p>
-   <div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://index-wta6cibvfx.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </P>
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5ff2b27ddf060f156a941255/1er60iet5';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+    </div>
+  </div>
+      <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://index-wta6cibvfx.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
   </body>
+
   </html>
 
 </body>
