--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image⁄x-icon" href="공.jpg">
 <title>FBallL_WEB</title>
+    
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LBS4XCCERK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
 <link rel="stylesheet" href="중복제거.css">
 
  </head>
